--- a/plan/index.html
+++ b/plan/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./index.js"></script>
-    <title>Dynamic 5x5 Table with Fixed Header Distance</title>
+    <title>电兵的入侵计划</title>
     <style>
         body {
             display: flex;
@@ -18,14 +18,14 @@
             color: #fff;
             font-family: 'Arial', sans-serif;
             text-align: center;
-            margin: 20px 0; /* Spacing between title and table */
+            margin: 20px 0;
         }
         table {
             border-collapse: separate;
             border-spacing: 0;
-            border: 3px solid #fff; /* 更明显的外围边框 */
-            border-radius: 5px; /* 维持圆角 */
-            overflow: hidden; /* 防止子元素溢出 */
+            border: 3px solid #fff;
+            border-radius: 5px;
+            overflow: hidden;
         }
         th, td {
             height: 50px;
