--- a/plan/index.html
+++ b/plan/index.html
@@ -64,6 +64,7 @@
             <tr>
                 <th style="width: 60px;">序号</th>
                 <th style="width: 300px;">目的地</th>
+                <th style="width: 150px;">城市</th>
                 <th style="width: 150px;">时间</th>
                 <th style="width: 150px;">状态</th>
                 <th style="width: 200px;">备注</th>
