--- a/plan/index.html
+++ b/plan/index.html
@@ -58,8 +58,8 @@
     </style>
 </head>
 <body>
-    <h1>电兵的入侵计划</h1>
-    <table id="myTable">
+    <h1>电兵入侵计划</h1>
+    <table id="tripTable">
         <thead>
             <tr>
                 <th style="width: 60px;">序号</th>
@@ -72,6 +72,9 @@
         </thead>
         <tbody>
         </tbody>
+    </table>
+    <h1>电兵接待计划</h1>
+    <table id="receptionTable">
     </table>
 </body>
 </html>
