--- a/plan/index.html
+++ b/plan/index.html
@@ -74,7 +74,6 @@
         </tbody>
     </table>
     <h1>电兵接待计划</h1>
-    <table id="receptionTable">
-    </table>
+    <h2>施工中</h2>
 </body>
 </html>
