--- a/plan/index.html
+++ b/plan/index.html
@@ -5,57 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./index.js"></script>
     <title>电兵的入侵计划</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            align-items: center;
-            margin: 0;
-            background-color: #2f2f2f;
-        }
-        h1 {
-            color: #fff;
-            font-family: 'Arial', sans-serif;
-            text-align: center;
-            margin: 20px 0;
-        }
-        table {
-            border-collapse: separate;
-            border-spacing: 0;
-            border: 3px solid #fff;
-            border-radius: 5px;
-            overflow: hidden;
-        }
-        th, td {
-            height: 50px;
-            color: white; 
-            border: 1px solid white;
-            text-align: center;
-            vertical-align: middle;
-            font-family: Microsoft YaHei;
-        }
-        th {
-            background-color: black;
-        }
-        tr:nth-child(odd) { /* 奇数行 */
-            background-color: #171e2d;
-        }
-
-        tr:nth-child(even) { /* 偶数行 */
-            background-color: #1c2334; /* 深灰色 */
-        }
-
-        .status-delay {
-            color: orange;
-        }
-        .status-normal {
-            color: #4ae979;
-        }
-        .status-finished {
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./stylesheet.css">
 </head>
 <body>
     <h1>电兵入侵计划</h1>
